[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# MÉTADONNÉES DU PROJET — PEP 621
# =============================================================================

[project]
name = "linux-python-utils"
version = "1.6.0"
description = "Bibliothèque utilitaire Python pour systèmes Linux"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fred", email = "frederic@ricfasohel.fr"},
]
keywords = [
    "linux", "utils", "systemd", "logging", "configuration",
    "commands", "dotconf", "validation", "integrity", "security",
    "network", "credentials", "identity", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

# =============================================================================
# DÉPENDANCES OPTIONNELLES
# =============================================================================

[project.optional-dependencies]
validation = [
    "pydantic>=2.0",
]
credentials = [
    "python-dotenv>=1.0",
    "keyring>=24.0",
]
deploy = [
    "platformdirs>=4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.9.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "isort>=5.13.0",
    "bandit[toml]>=1.7.8",
    "safety>=3.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "keyring>=24.0",
    "platformdirs>=4.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
]

# =============================================================================
# URLs DU PROJET
# =============================================================================

[project.urls]
Homepage      = "https://github.com/fredrun14/linux_python_utils"
Documentation = "https://github.com/fredrun14/linux_python_utils#readme"
Repository    = "https://github.com/fredrun14/linux_python_utils.git"
Issues        = "https://github.com/fredrun14/linux_python_utils/issues"
Changelog     = "https://github.com/fredrun14/linux_python_utils/blob/master/CHANGELOG.md"

# =============================================================================
# CONFIGURATION SETUPTOOLS — src-layout
# =============================================================================

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.toml", "*.yaml", "*.yml", "*.json"]

# =============================================================================
# PYTEST — Configuration des tests
# =============================================================================

[tool.pytest.ini_options]
testpaths        = ["tests"]
python_files     = ["test_*.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
addopts          = "-v --tb=short --strict-markers -ra --cov=src/linux_python_utils --cov-report=term-missing"
markers = [
    "slow: tests lents, exclure avec '-m \"not slow\"'",
    "integration: tests d'intégration, exclure avec '-m \"not integration\"'",
    "unit: tests unitaires purs",
]

# =============================================================================
# COVERAGE — Couverture de code
# =============================================================================

[tool.coverage.run]
source = ["src/linux_python_utils"]
branch = true
omit   = [
    "tests/*",
    "*/__pycache__/*",
    "*.pyc",
]

[tool.coverage.report]
fail_under   = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __repr__",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

# =============================================================================
# MYPY — Vérification statique des types (mode strict)
# =============================================================================

[tool.mypy]
python_version          = "3.11"
strict                  = true
warn_return_any         = true
warn_unused_configs     = true
warn_unused_ignores     = true
warn_redundant_casts    = true
disallow_untyped_defs   = true
disallow_any_unimported = true
no_implicit_optional    = true

[[tool.mypy.overrides]]
module = [
    "keyring.*",
    "dotenv.*",
]
ignore_missing_imports = true

# =============================================================================
# BLACK — Formatage du code
# =============================================================================

[tool.black]
line-length    = 79
target-version = ["py311"]
include        = '\\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

# =============================================================================
# ISORT — Tri des imports (compatible black)
# =============================================================================

[tool.isort]
profile                        = "black"
line_length                    = 79
multi_line_output              = 3
include_trailing_comma         = true
force_grid_wrap                = 0
use_parentheses                = true
ensure_newline_before_comments = true
known_first_party              = ["linux_python_utils"]
known_third_party              = ["pydantic", "dotenv", "keyring", "platformdirs"]

# =============================================================================
# RUFF — Linter moderne (remplace pycodestyle/flake8)
# =============================================================================

[tool.ruff]
line-length    = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4"]
ignore = [
    "E501",  # Longueur de ligne gérée par black
    "B008",  # Ne pas appeler de fonctions dans les arguments par défaut
]
fixable   = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert autorisé dans les tests
    "S106",  # Passwords hardcodés OK dans les tests
]

# =============================================================================
# BANDIT — Analyse statique de sécurité (SAST)
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", "examples", "docs"]
skips        = []

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
